--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,37 @@
+html{
+  min-height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
+  background: url(/img/background-2462431.jpg) ;
+  background-size: 100%;
+  
+
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+form{
+  padding: 20px;
+  margin-top: 60px;
+}
+
+form button, form h5{
+  margin: 20px 0;
+}
+
+input[type=text]:not(.browser-default):focus:not([readonly]),
+input[type=email]:not(.browser-default):focus:not([readonly]),
+input[type=password]:not(.browser-default):focus:not([readonly]),
+textarea.materiaalize-textarea:focus:not([readonly]){
+  border-color:#ec407a;
+  box-shadow: none;
 }
 
 code {
