--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,45 @@ form button, form h5{
   margin: 20px 0;
 }
 
+.react-html5-camera-photo {
+  position: relative;
+  text-align: center;
+}
+
+#container-circles {
+  position: absolute;
+  left: 50%;
+  bottom: 90px;
+}
+
+#inner-circle, #outer-circle {
+  position: absolute;
+  border-radius: 50%;
+}
+
+#outer-circle {
+  left: -37px;
+  height: 75px;
+  width: 75px;
+  background-color: rgba(255, 255, 255, 0.4);
+  z-index: 1;
+}
+
+#inner-circle {
+  left: 50%;
+  top: 38px;
+  height: 44px;
+  width: 44px;
+  z-index: 2;
+  background: rgb(255, 255, 255);
+  margin: -22px 0px 0px -22px;
+}
+
+#inner-circle, #outer-circle {
+  position: absolute;
+  border-radius: 50%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
